borders for index2

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1342,7 +1342,7 @@ form .pretty-radio.active {
   width: 298px;
   height: 298px;
   text-align: center;
-  background: #eeeeee;
+  background: #d5d5d5;
   border: 1px solid #eeeeee;
   padding: 0px;
 }
