--- a/assets/less/subtheme.less
+++ b/assets/less/subtheme.less
@@ -130,7 +130,7 @@
 			float:left;
 			.square(298px,298px);
 			text-align:center;
-			background:@lighter-grey;
+			background:darken(@lighter-grey, 10%);
 			border:1px solid @lighter-grey;
 			padding:0px;
 		}
