--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1205,6 +1205,64 @@ form .pretty-radio.active {
 }
 /* 
  * =============================================================
+ * SCROLLBAR
+ * =============================================================
+ */
+body {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0px;
+  overflow-y: scroll;
+  overflow-x: hidden;
+}
+html {
+  overflow-y: auto;
+  background-color: transparent;
+}
+::-webkit-scrollbar {
+  width: 12px;
+}
+::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+}
+::-webkit-scrollbar-thumb {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
+}
+/* 
+ * =============================================================
+ * STRUCTURE
+ * =============================================================
+ */
+.site-header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  padding: 20px 0px;
+  background: #ffffff;
+  z-index: 500;
+}
+.sidebars-wrap {
+  position: relative;
+}
+.sidebar {
+  top: 120px;
+}
+.sidebar.left {
+  position: fixed;
+  overflow: auto;
+  left: 0px;
+  width: 200px;
+}
+.sidebar.right {
+  position: absolute;
+  right: 12px;
+  width: 400px;
+}
+/* 
+ * =============================================================
  * SORTABLE GRID
  * =============================================================
  */
@@ -1240,22 +1298,6 @@ form .pretty-radio.active {
 .sortable-grid .sortable-placeholder {
   background: none;
   border: 1px dashed #eeeeee;
-}
-.sidebars-wrap {
-  position: relative;
-}
-.sidebar {
-  position: absolute;
-}
-.sidebar.left {
-  top: 0px;
-  left: 0px;
-  width: 200px;
-}
-.sidebar.right {
-  top: 0px;
-  right: 0px;
-  width: 400px;
 }
 /* 
  * =============================================================
@@ -1309,9 +1351,10 @@ form .pretty-radio.active {
  * =============================================================
  */
 .sortable-grid-mod {
+  overflow: auto;
   display: none;
   float: left;
-  margin: 0px 400px 0px 220px;
+  margin: 120px 400px 0px 220px;
   zoom: 1;
 }
 .sortable-grid-mod:before {
@@ -1329,8 +1372,8 @@ form .pretty-radio.active {
 .sortable-grid-mod .box .inner {
   margin: 33px 33px;
   background: #ffffff;
-  width: 230px;
-  height: 228px;
+  width: 130px;
+  height: 128px;
 }
 .sortable-grid-mod .box.ui-sortable-helper {
   background: none;
@@ -1339,8 +1382,8 @@ form .pretty-radio.active {
 .sortable-grid-mod .box,
 .sortable-grid-mod .sortable-placeholder {
   float: left;
-  width: 298px;
-  height: 298px;
+  width: 198px;
+  height: 198px;
   text-align: center;
   background: #d5d5d5;
   border: 1px solid #eeeeee;
@@ -1349,22 +1392,6 @@ form .pretty-radio.active {
 .sortable-grid-mod .sortable-placeholder {
   background: #e1e1e1;
   border: 1px dashed #eeeeee;
-}
-.sidebars-wrap {
-  position: relative;
-}
-.sidebar {
-  position: absolute;
-}
-.sidebar.left {
-  top: 0px;
-  left: 0px;
-  width: 200px;
-}
-.sidebar.right {
-  top: 0px;
-  right: 0px;
-  width: 400px;
 }
 /* 
  * =============================================================
